--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@babel/core": "^7.15.0",
     "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.25.0",
     "typescript": "^4.4.2"
   }
 }
