added test for tools button, more code clean up

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,9 @@
     },
     "extends": [
         "eslint:recommended",
-        "plugin:react/recommended"
+        "plugin:react/recommended",
+        "plugin:jest-dom/recommended",
+        "plugin:testing-library/react"
     ],
     "parserOptions": {
         "ecmaFeatures": {
