--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
-    "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.0",
@@ -48,8 +47,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
+    "@testing-library/jest-dom": "^5.14.1",
     "eslint": "^7.32.0",
+    "eslint-plugin-jest-dom": "^3.9.0",
     "eslint-plugin-react": "^7.25.0",
+    "eslint-plugin-testing-library": "^4.12.0",
+    "jest-axe": "^5.0.1",
     "typescript": "^4.4.2"
   }
 }
