--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "seedrandom": "^3.0.5",
     "use-sound": "^4.0.1",
     "web-vitals": "^1.1.2"
   },
