--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-plugin-jest-dom": "^3.9.0",
     "node-sass": "^6.0.1",
     "prop-types": "^15.7.2",
+    "random-extra": "^3.6.16",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
