--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bluebird": "^3.7.2",
     "bootstrap": "^5.1.0",
     "bootstrap-switch-button-react": "^1.2.0",
     "eslint-plugin-jest-dom": "^3.9.0",
     "node-sass": "^6.0.1",
     "prop-types": "^15.7.2",
     "random-extra": "^3.6.16",
+    "random-number-csprng": "^1.0.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
